feat: create openapi documentation of all endpoints
